--- a/src/components/trackers/TrackerContainer.css
+++ b/src/components/trackers/TrackerContainer.css
@@ -1,6 +1,6 @@
 .tracker-container {
   height: 100%;
-  margin: 2em 0;
+  margin: 2em 0 0 0;
   padding: 1.5em;
   border-radius: 2em;
   background-color: #ffffff;
